fixed some spacing

--- a/src/App.css
+++ b/src/App.css
@@ -159,9 +159,12 @@ a:visited {
   flex-flow: column;
   padding: 75px 0px;
   background-color: rgb(255, 255, 255);
+  
 }
-.about h2 {
+.section-name {
+  font-size: 30px;
   color: rgb(96, 95, 95);
+  font-family: 'Abel', sans-serif;
 }
 .about-pic {
   width:200px;
@@ -261,7 +264,7 @@ a:visited {
 }
 .project-card-img {
   width: 500px;
-  height: 300px;
+  height: 250px;
   background-position: center;
   background-size: 115%;
 }
@@ -371,4 +374,12 @@ font-size: 13px;
 }
 .contact-form > * {
   margin: 10px 0px;
+}
+
+.footer {
+  color: rgb(142, 142, 142);
+}
+
+.social-links {
+  margin-bottom: -100px;
 }
